fixed map on mobile

--- a/src/shared/css/style.css
+++ b/src/shared/css/style.css
@@ -762,6 +762,14 @@ ol.breadcrumbs a {
     font-size: 16px;
     margin: 0 0.5em;
 }
+/* Mobile */
+@media only screen and (max-width: 420px) {
+    ol.breadcrumbs li,
+    ol.breadcrumbs a{
+        font-size: 12px;
+    }
+}
+
 
 .logo-area {
     align-items: flex-end;
